Completed Laravel Setup

--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,1 +1,16 @@
-<h1>Hello From Homepage</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/app.css">
+</head>
+<body>
+    
+<h1>Hey MothaFucka!</h1>
+    <script src="/js/app.js"> </script>
+</body>
+</html>
