--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,16 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/app.css">
-</head>
-<body>
-    
-<h1>Hey MothaFucka!</h1>
-    <script src="/js/app.js"> </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real Time Pizza App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/app.css" />
+  </head>
+  <body>
+    <nav
+      class="container py-4$smooth mx-auto flex items-center justify-between"
+    >
+      <div>
+        <img src="img/logo.png" alt="logo" />
+      </div>
+      <div>
+        <ul class="flex items-center">
+          <li class="ml-6"><a href="#">Menu</a></li>
+          <li class="ml-6"><a href="#">Offers</a></li>
+          <li class="ml-6"><a href="#">Register</a></li>
+          <li class="ml-6"><a href="#">Login</a></li>
+          <li class="ml-6">
+            <a href="#" class="inline-block rounded-full px-4 py-2"
+              ><img src="img/cart.png" alt="Cart"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section class="hero py-16">
+      <div class="container mx-auto flex items-center justify-between">
+        <div class="w-1/2">
+          <h6 class="text-lg"><em>Are you hungry?</em></h6>
+          <h1 class="text-6xl font-bold">Dont Wait!</h1>
+        </div>
+        <div class="w-1/2">
+          <img src="/img/hero-pizza.png" alt="Pizza" />
+        </div>
+      </div>
+    </section>
+
+    <section class="menu container mx-auto py-8">
+      <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+      <div class="grid grid-cols-4 col-gap-12 row-gap-16">
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+        <div class="w-64">
+          <img src="/img/pizza.png" alt="pizza" class="h-40 mb-4 mx-auto" />
+          <div class="text-center">
+            <h2 class="mb-4 text-lg">Margherita</h2>
+            <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+            <div class="flex items-center justify-around mt-6">
+              <span class="font-bold text-lg">$250</span>
+              <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                <span >+</span>
+                <span class="ml-4">Add</span>
+              </button>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </section>
+
+    <script src="/js/app.js"></script>
+  </body>
 </html>
