Hey Completed Cart and Auth Pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,3 +40,33 @@ section.hero {
   color: #fff;
 }
 
+.btn-primary {
+  background: #fe5f1e;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-primary:hover {
+  background: #b23301;
+}
+
+section.cart {
+  background: #f8f8f8;
+}
+
+section.cart .amount {
+  color: #fe5f1e;
+}
+
+section.login {
+  background: #f8f8f8;
+  min-height: 91vh;
+}
+
+section.login a {
+  color: #fe5f1e;
+}
+
+section.login a:hover {
+  color: #b23301;
+}
+
